samples/_failures_safe/1761408319_fa7f6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42645155.c: In function ‘main’:
./samples/SAFE/__tmp_42645155.c:169:12: error: missing terminating " character
  169 |     printf("Available events: 0=START,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_42645155.c:169:5: error: expected expression at end of input
  169 |     printf("Available events: 0=START,
      |     ^~~~~~
./samples/SAFE/__tmp_42645155.c:169:5: error: expected declaration or statement at end of input
